Last version before submission

--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -78,7 +78,7 @@
 \newcommand{\thesistitle}{Test-beam measurements and simulation
   studies of thin pixel sensors for the CLIC vertex detector}
 \newcommand*{\thesisauthor}{Niloufar Alipour Tehrani}
-\newcommand*{\thesistown}{citizen of Meyrin (Gen\`{e}ve)}
+\newcommand*{\thesistown}{citizen of Meyrin (Geneva)}
 \renewcommand*{\InstituteName}{\PI}
 \renewcommand*{\inInstitute}{\inPI}
 \renewcommand*{\InstituteAddress}{\PIaddress}
