--- a/PhD_Submit_Title.tex
+++ b/PhD_Submit_Title.tex
@@ -38,12 +38,12 @@
 {\large presented by} \\ \vspace{0.3cm}
 {\Large \thesisauthor}\\ \vspace{1cm}
 {\Large \textit{ing. \'{e}l. dipl. EPF, EPF Lausanne}}\\ \vspace{1cm}
-{\Large born on 11.08.1989} \\
+{\Large born on 11.08.1989} \\ \vspace{0.1cm}
 {\Large \thesistown}\\ \vspace{2cm}
 {\large accepted on the recommendation of} \\ \vspace{0.5cm}
 {\Large \textbf{Prof. Dr. G\"{u}nther Dissertori}} \\ \vspace{0.2cm}
 {\Large \textbf{Prof. Dr. Rainer Wallny}} \\ \vspace{0.2cm}
-{\Large \textbf{Dr. Dominik Dannheim}} \\ \vspace{1cm}
+{\Large \textbf{Dr. Dominik Dannheim}} \\ \vspace{0.9cm}
 
 %% \begin{minipage}{0.4\textwidth}
 %% \begin{flushleft} \large
