--- a/abstract.tex
+++ b/abstract.tex
@@ -11,7 +11,7 @@ high precision requirements on the vertex detector made of pixel
 detectors: a high pointing resolution of $3\,\micron$, very low mass
 of $0.2\%$~X\textsubscript{0} per layer, 10~ns time stamping
 capability and low power dissipation of 50~mW/cm\textsuperscript{2}
-compatibile with air-flow cooling. In this thesis, hybrid assemblies
+compatible with air-flow cooling. In this thesis, hybrid assemblies
 with thin active-edge planar sensors are characterised through
 calibrations, laboratory and test-beam measurements. Prototypes
 containing $50\,\micron$ to $150\,\micron$ thin planar silicon sensors
