--- a/include/Conclusions.tex
+++ b/include/Conclusions.tex
@@ -20,7 +20,7 @@ In the scope of this thesis, the prospects of planar silicon pixel
 sensors to meet the challenging requirements in the vertex detector in
 terms of spatial resolution and material budget have been
 assessed. Thin active-edge sensors with thicknesses varying between
-$50\,\micron$ to $150\,\micron$ have been studied in test-beam and
+$50\,\micron$ and $150\,\micron$ have been studied in test-beam and
 laboratory measurements. All studies were accompanied by simulations.
 
 The high-performance Timepix3 pixel readout ASIC, with $55\,\micron$
@@ -47,7 +47,7 @@ SPS. All of the assemblies have shown an excellent detection
 efficiency. In general, a more precise reconstruction of the track's
 passing point was possible for multi-pixel clusters by weighting the
 energy deposits in the involved pixels. The $\eta$-algorithm has given
-better results by taking into account the non-linearities due to the
+better results by taking into account the non-linearities in to the
 charge sharing. The results however have shown that the amount of
 charge sharing in such thin sensors is very low, limiting the
 achievable resolution.
@@ -82,10 +82,10 @@ concepts with enhanced charge sharing or even smaller pixel pitch will
 therefore be required.
 
 
-Finally, the efficiency of active-edge sensors were studied. Assemblies
+Finally, the efficiency of active-edge sensors was studied. Assemblies
 with different edge widths and guard ring configurations were
 investigated in test-beam. A two-dimensional TCAD simulation of the
-edge was implemented which allowed for a better understanding of the
+edge was implemented, which allowed for a better understanding of the
 fabrication process and the operation of such devices.
 
 At the nominal operating conditions, none of the assemblies were
