--- a/thesis_acknowledge.tex
+++ b/thesis_acknowledge.tex
@@ -47,17 +47,23 @@ particularly, I express my gratitude to:
   and test-beams we have shared. Edinei Santin, for reviewing the
   chapter on pixel readout ASICs.
 
-\item Mathieu Benoît for leading me to the pixel world through
+\item Mathieu Benoit for leading me to the pixel world through
   test-beams, TCAD simulations and AllPix simulations.
 
 \item Rosa Simoniello, for sharing the office and many discussions.
 \end{itemize}
 
+This project has received funding from the European Union’s Horizon
+2020 research and innovation programme under grant agreement No
+654168.
+
 I would like to thank my friends with whom I have shared great
 memorable moments and I could count on them for any kind of
-support. My friends from Lausanne whom I met during my studies at EPFL
-and we shared many years on the university benches and now we share so
-many great events. And also to my friends I have met at CERN.
+support. My friends whom I met during my studies at EPFL and we shared
+many years on the university benches and now we share so many great
+events. Most particularly thanks to Charlotte, Chloé, Christophe,
+Coralie, Lara, Mina et Sebastien. And also to my friends from CERN who
+are always present to cheer me up: Elena, Enrico and Luca.
 
 Finally, I would like to thank my amazing family: my parents,
 Mahmanzar and Behzad, for their unconditional love and support
